[package]
name = "multiplayerctl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
libc = "0.2.144"
once_cell = "1.17.1"
signal-hook = "0.3.15"
structopt = { version = "0.3", default-features = true }
